# naver-mcp-py

./: .env.example  .gitignore  AGENTS.md  README.md  TOOL_CONTRACT.md  pyproject.toml  sitecustomize.py
docs/: ARCHITECTURE.md  TOOL_CONTRACT.md
src/naver_mcp/: __init__.py  cache.py  client.py  config.py  errors.py  models.py  normalize.py  server.py  tools_datalab.py  tools_search.py
tests/: __init__.py  test_normalize.py  test_tools_datalab.py  test_tools_search.py
