[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "naver-mcp-py"
version = "0.1.0"
description = "Python MCP server and client library for Naver Search API and DataLab"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
server = ["fastmcp>=2.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
